# advent-of-code

./: .gitignore  pyproject.toml
2021/day-15/: main.py
2021/day-16/: main.py
2023/day-11/: main.py
2023/day-15/: main.py
2023/day-17/: main.py
2023/day-18/: main.py
2023/day-19/: main.py
2023/day-2/: main.py
2023/day-20/: main.py
2023/day-21/: main.py
2023/day-22/: main.py
2023/day-24/: main.py
2023/day-25/: main.py
2023/day-3/: main.py
2023/day-5/: main.py
2023/day-6/: main.py
2023/day-7/: main.py
2023/day-8/: main.py
2023/day-9/: main.py
2024/day-1/: main.py
2024/day-10/: main.py
2024/day-11/: main.py
2024/day-12/: main.py
2024/day-13/: main.py
2024/day-14/: main.py
2024/day-15/: main.py
2024/day-16/: main.py
2024/day-17/: main.py
2024/day-18/: main.py  requirements.txt
2024/day-19/: main.py
2024/day-2/: main.py
2024/day-20/: main.py
2024/day-21/: main.py
2024/day-22/: main.py
2024/day-23/: main.py
2024/day-24/: main.py
2024/day-25/: main.py
2024/day-3/: main.py
2024/day-4/: main.py
2024/day-5/: main.py
2024/day-6/: main.py
2024/day-7/: main.py
2024/day-8/: main.py
2024/day-9/: main.py
2025/day-1/: main.py
2025/day-10/: main.py
2025/day-11/: main.py
2025/day-12/: main.py
2025/day-2/: main.py
2025/day-3/: main.py
day-1/: main.py
day-10/: main.py
day-11/: main.py
day-12/: main.py
day-13/: main.py
day-14/: main.py
day-16/: main.py
day-18/: main.py  requirements.txt
day-20/: main.py
day-21/: main.py
day-22/: main.py
day-23/: main.py
day-4/: main.py
(+6 files in other folders)
