[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Michele Sorcinelli <michelesr@autistici.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
graphviz = "^0.20.3"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
